<resources>
    <string name="app_name">Dati Anagrafici</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_btn">Add</string>
    <string name="add_btn_text">Add</string>
    <string name="sex_hint">Sex</string>
    <string name="province_hint">Province</string>
    <string name="city_of_birth_hint">City of Birth</string>
    <string name="age_hint">Age</string>
    <string name="surname_hint">Surname</string>
    <string name="add_user_title">Add User</string>
    <string name="name_hint">Name</string>
</resources>